history range for the timesheet